--- a/MyPhomeApp/Base.lproj/Main.storyboard
+++ b/MyPhomeApp/Base.lproj/Main.storyboard
@@ -18,49 +18,57 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2hn-Et-iby">
-                                <rect key="frame" x="143" y="465" width="45" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eG4-UU-mnb">
+                                <rect key="frame" x="31" y="176" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="95f-G6-G0P">
+                                <rect key="frame" x="31" y="332" width="299" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Senha" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qIE-8B-kZ1">
+                                <rect key="frame" x="31" y="297" width="48" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MyPhome" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O7x-IS-bzF">
+                                <rect key="frame" x="149" y="76" width="77" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Login" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9bJ-9G-NWc">
+                                <rect key="frame" x="31" y="213" width="299" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2hn-Et-iby">
+                                <rect key="frame" x="165" y="455" width="45" height="30"/>
                                 <state key="normal" title="LOGIN"/>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eG4-UU-mnb">
-                                <rect key="frame" x="31" y="176" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="95f-G6-G0P">
-                                <rect key="frame" x="129" y="292" width="97" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Senha" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qIE-8B-kZ1">
-                                <rect key="frame" x="41" y="297" width="48" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="MyPhome" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O7x-IS-bzF">
-                                <rect key="frame" x="120" y="76" width="77" height="26"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Login" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9bJ-9G-NWc">
-                                <rect key="frame" x="31" y="214" width="97" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="0.45612664190417684" blue="0.50665491341364155" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="O7x-IS-bzF" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="cSK-Jy-1VQ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="2hn-Et-iby" secondAttribute="bottom" constant="174" id="2Nh-mz-BO9"/>
+                            <constraint firstItem="O7x-IS-bzF" firstAttribute="centerX" secondItem="2hn-Et-iby" secondAttribute="centerX" id="3dS-GR-jYX"/>
+                            <constraint firstItem="9bJ-9G-NWc" firstAttribute="top" secondItem="eG4-UU-mnb" secondAttribute="bottom" constant="12" id="3gA-l5-sGu"/>
+                            <constraint firstItem="qIE-8B-kZ1" firstAttribute="top" secondItem="9bJ-9G-NWc" secondAttribute="bottom" constant="58" id="6Je-RB-sx8"/>
+                            <constraint firstItem="qIE-8B-kZ1" firstAttribute="centerY" secondItem="95f-G6-G0P" secondAttribute="centerY" id="Dvo-om-0Kb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="9bJ-9G-NWc" secondAttribute="trailing" constant="45" id="RHS-y5-oMJ"/>
+                            <constraint firstItem="eG4-UU-mnb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="156" id="SwW-NX-baE"/>
+                            <constraint firstItem="O7x-IS-bzF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="56" id="bzs-TG-6Qf"/>
+                            <constraint firstItem="95f-G6-G0P" firstAttribute="leading" secondItem="qIE-8B-kZ1" secondAttribute="leading" id="cHK-LX-ZYU"/>
+                            <constraint firstItem="9bJ-9G-NWc" firstAttribute="trailing" secondItem="95f-G6-G0P" secondAttribute="trailing" id="cdc-Kt-xUX"/>
+                            <constraint firstItem="95f-G6-G0P" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="31" id="jhc-bd-Dcf"/>
+                            <constraint firstItem="9bJ-9G-NWc" firstAttribute="leading" secondItem="eG4-UU-mnb" secondAttribute="leading" id="qZl-es-Pdi"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="O7x-IS-bzF" secondAttribute="trailing" constant="149" id="t2c-53-8bt"/>
+                            <constraint firstItem="9bJ-9G-NWc" firstAttribute="leading" secondItem="qIE-8B-kZ1" secondAttribute="leading" id="yee-Hc-vZk"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
